--- a/index.html
+++ b/index.html
@@ -1,38 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>photo</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <input type="radio" name="photos" id="check1" checked>   
-    <input type="radio" name="photos" id="check2" >   
-    <input type="radio" name="photos" id="check3" >   
-    <input type="radio" name="photos" id="check4" >  
-    
-    <div class="container">
-        <h1>OUR PHOTO GALLERY</h1>
-        <div class="top-content">
-            <h3>photo gallery</h3>
-            <label for="check1">All photos</label>
-            <label for="check2">Family photos</label>
-            <label for="check3">ckilds photos</label>
-            <label for="check4">Visited Piaces</label>
-        </div>
 
-         <div class="photo-gallery">
-            <div class="pic place">
-                <img src="./photos/Honda Civic Type R1.jpg" >
-                <img src="./photos/Honda Civic Type R2.jpg" >
-                <img src="./photos/Honda Civic Type R3.jpg" >
-                <img src="./photos/Honda Civic Type R4.jpg" >
-                <img src="./photos/Honda Civic Type R5.jpg" >
-                <img src="./photos/Honda Civic Type R6.jpg" >
-            </div>  
-         </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>photo</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <input type="radio" name="photos" id="check1" checked />
+  <input type="radio" name="photos" id="check2" />
+  <input type="radio" name="photos" id="check3" />
+  <input type="radio" name="photos" id="check4" />
+
+  <div class="container">
+    <h1>OUR PHOTO GALLERY</h1>
+    <div class="top-content">
+      <h3>photo gallery</h3>
+      <label for="check1">All photos</label>
+      <label for="check2">Family photos</label>
+      <label for="check3">ckilds photos</label>
+      <label for="check4">Visited Piaces</label>
     </div>
+
+    <div class="photo-gallery">
+            <div class="pic place">
+        <img src="./photos/Honda Civic Type R1.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Honda Civic Type R2.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Honda Civic Type R3.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Honda Civic Type R4.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Honda Civic Type R5.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Honda Civic Type R6.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Mitsubishi Evo1.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Mitsubishi Evo2.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Mitsubishi Evo3.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Mitsubishi Evo 4.png" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Mitsubishi Evo 5.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Nissan R341.png" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Nissan R342.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Nissan R343.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Nissan R344.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Nissan R345.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Nissan R346.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/RX-7 FD3S1.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/RX-7 FD3S2.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/RX-7 FD3S3.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/RX-7 FD3S4.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/RX-7 FD3S5.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Subaru  Impreza1.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Subaru  Impreza2.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Subaru  Impreza3.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Subaru  Impreza4.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota AE861.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota AE862.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota AE863.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota AE864.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota Supra MK41.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota Supra MK42.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota Supra MK43.jpg" />
+      </div>
+            <div class="pic place">
+        <img src="./photos/Toyota Supra MK44.png" />
+      </div>
+          </div>
+  </div>
 </body>
+
 </html>
